--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,18 @@
+:root {
+
+    --text-color: #DBE4EF;
+
+    --card-front-color: #144480;
+
+    --card-back-color: #00F4BF;
+
+}
+
+
+
 body{
 
-    background-color: bisque;
+    background: url('img/bg-desktop.webp');
 
     font-family: Bai Jamjuree;
 
@@ -20,7 +32,7 @@ body{
 
     margin: 1rem 1rem;
 
-    background-color: aqua;
+ 
 
     height: 20rem;
 
@@ -34,9 +46,11 @@ body{
 
 .cartao__conteudo {
 
+    background-color: var(--card-front-color);
+
     text-align: center;
 
-    background-color: aquamarine;
+   
 
     height: 100%;
 
@@ -46,7 +60,9 @@ body{
 
 .cartao__conteudo h3 {
 
-    background-color: tomato;
+    color: var(--text-color);
+
+    border: 1px solid var(--text-color);
 
     text-align: left;
 
@@ -60,11 +76,67 @@ body{
 
     font-size: 1vw;
 
-    
+    }
+
+
+
+.cartao__conteudo p {
+
+    margin-top: 1rem;
+
+    padding: 2rem;
 
 }
 
 
+
+.cartao__conteudo__pergunta p {
+
+    color: var(--text-color);
+
+    font-weight: 500;
+
+}
+
+
+
+.cartao__conteudo__resposta p {
+
+    color: var(--card-back-color);
+
+    font-weight: 700;
+
+}
+
+
+
+footer {
+
+    background-color: black;
+
+    color: white;
+
+    position: fixed;
+
+    bottom: 0;
+
+    width: 100%;
+
+    height: 2rem;
+
+}
+
+
+
+footer p {
+
+    text-align: center;
+
+    font-size: 0.6rem;
+
+    margin-top: 0.5rem;
+
+}
 
 
 
