--- a/assets/style.css
+++ b/assets/style.css
@@ -12,7 +12,7 @@
 
 body{
 
-    background: url('img/bg-tablet.jpg');
+    background: url('img/bg-mobile.jpg');
 
     font-family: Bai Jamjuree;
 
